Added different world saving/fetching